--- a/surveillance-engine/requirements.txt
+++ b/surveillance-engine/requirements.txt
@@ -1,8 +1,7 @@
-grpcio
-grpcio-tools
-pandas
-reportlab
-scikit-learn
-pyarrow
-duckdb
-aiofiles
+grpcio==1.60.0
+grpcio-tools==1.60.0
+protobuf==4.25.1
+pandas==2.1.4
+numpy==1.26.2
+scikit-learn==1.3.2
+pyyaml==6.0.1
